corrected misalignment of weekdays and changed the layout of the sunset/sunrise/m/s

--- a/style.css
+++ b/style.css
@@ -34,15 +34,31 @@ body {
 
 /*no container img*/
 #main-icon {
-  width: 60px;
-  height: 60px;
+  width: 68px;
+  height: 68px;
   margin: 15px auto;
   display: block;
-  margin: 25px auto 20px auto;
   position: relative;
-  top: 15px;
 }
 
+.icon-temp {
+  display: flex;
+  align-items: center;
+  gap: 8px; /* adjust spacing between icon and temp */
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60%;
+  background-image: url('./assets/Cloudy.jpg');
+  background-size: cover;
+  background-position: center;
+  clip-path: ellipse(120% 92% at 50% 0%);
+  z-index: 0;
+}
 
 .overlay {
   width: 100%;
@@ -167,6 +183,10 @@ input::placeholder {
   display: flex;
 }
 
+.sunrise-sunset p {
+  white-space: nowrap;
+}
+
 .weather-forecast {
   color: #333;
   position: absolute;
@@ -180,13 +200,20 @@ input::placeholder {
 
 .weather-forecast table {
   width: 100%;
-  text-align: center;
+  text-align: left;
   border-collapse: collapse;
 }
 
 .weather-forecast td {
-  padding: 6px 12px;
-  font-size: 16 px;
+  padding: 6px 8px;
+  font-size: 16px;
+}
+
+#windday1,
+#windday2,
+#windday3,
+#windday4 {
+  white-space: nowrap;
 }
 
 /*no iconday style*/
